# docs/swagger.json
@@ -2168,6 +2168,13 @@
                         "name": "provider",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Auth key",
+                        "name": "db-key",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -2207,6 +2214,13 @@
                         "description": "Code",
                         "name": "code",
                         "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Auth key",
+                        "name": "db-key",
+                        "in": "header",
                         "required": true
                     }
                 ],
@@ -2278,6 +2292,13 @@
                         "description": "Config id",
                         "name": "id",
                         "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Auth key",
+                        "name": "db-key",
+                        "in": "header",
                         "required": true
                     }
                 ],
